[tool.poetry]
name = "astraldb"
version = "0.1.1"
description = "Yet another database"
authors = ["StealthyPanda <shaikm259@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.3"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic = "^2.10.3"
numpy = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
astral = "astraldb.cli.cli:main"

# [tool.poetry.package]
# include = [
#     { include = "astraldb", from = "src" }
# ]
